test/libsolidity/syntaxTests/types/bytes256.sol
contract C {
  bytes256 b256 = 1;
}
// ----
// DeclarationError 7920: (15-23='bytes256'): Identifier not found or not unique.
